Now setting rotation constraints on the main camera. Now clearing camera control inputs except for mouse to keep player and camera control separate.

--- a/src/app/ui/ui.component.html
+++ b/src/app/ui/ui.component.html
@@ -1,1 +1,9 @@
-<div class="ui-wrapper">UI Wrapper</div>
+<div class="ui-wrapper">
+  <header class="top-container">
+    <nav class="navbar">
+      <div class="left"></div>
+      <div class="center">Boomland: Arenas</div>
+      <div class="right"></div>
+    </nav>
+  </header>
+</div>
