--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,6 +12,11 @@
 /*****************************************************
   * styles
   *****************************************************/
+@font-face {
+  font-family: "ChicagoFLF";
+  src: url("fonts/ChicagoFLF.ttf") format("truetype"); /* Safari, Android, iOS */
+}
+
 html,
 body,
 app-root,
@@ -21,6 +26,7 @@ app-game {
   height: 100%;
   margin: 0;
   padding: 0;
+  font-family: "ChicagoFLF", "Times New Roman", "Georgia", serif;
 }
 
 body {
